fix gradle issues